[KM-100] #REVIEW 'analyze:quality' {Update Test Coverrage and Fix Checkstyle & findBugs hints.}